; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/test/stress/extr_microbench.c_malloc_sallocx_free.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/test/stress/extr_microbench.c_malloc_sallocx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Unexpected malloc() failure\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"Unexpected sallocx() failure\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @malloc_sallocx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @malloc_sallocx_free() #0 {
  %1 = alloca i8*, align 8
  %2 = call i8* @malloc(i32 1)
  store i8* %2, i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @test_fail(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %16

7:                                                ; preds = %0
  %8 = load i8*, i8** %1, align 8
  %9 = call i32 @sallocx(i8* %8, i32 0)
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 @test_fail(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %7
  %14 = load i8*, i8** %1, align 8
  %15 = call i32 @free(i8* %14)
  br label %16

16:                                               ; preds = %13, %5
  ret void
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @test_fail(i8*) #1

declare dso_local i32 @sallocx(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
